--- a/trim2/mivagrant10/Vagrantfile
+++ b/trim2/mivagrant10/Vagrantfile
@@ -2,4 +2,9 @@ Vagrant.configure(2) do |config|
   config.vm.box = "micaja10_ubuntu_precise32"
   config.vm.network :forwarded_port, host: 4567, guest: 80
   config.vm.provision :shell, :path => "install_apache.sh"
-end 
+  
+  config.vm.provision :puppet do |puppet|
+	puppet.manifest_file = "mipuppet.pp"
+  end
+end
+ 
